<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MozStumbler</string>
    <string name="action_about">About MozStumbler</string>
    <string name="action_preferences">Settings</string>
    <string name="action_upload_observations">Upload observations</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="view_map">Test Mozilla Location Service</string>
    <string name="service_name">Mozilla Stumbler</string>
    <string name="activity_recognition_service">Mozilla Stumbler Activity Recognition Intent Service</string>
    <string name="wifi_access_points">Wi-Fi Access Points Scanned: %1$d</string>
    <string name="wifi_disabled">0 (Wi-Fi disabled)</string>
    <string name="visible_wifi_access_points">Wi-Fi Access Points Visible: %1$s</string>
    <string name="cells_scanned">Cells Scanned: %1$d</string>
    <string name="cells_visible">Cells Visible: %1$d</string>
    <string name="gps_satellites">GPS Satellites Used / Visible: %1$d/%2$d</string>
    <string name="last_location">Last Location: %1$s</string>
    <string name="coordinate">%1$.4f, %2$.4f</string>
    <string name="locations_scanned">Locations Scanned: %1$d</string>
    <string name="last_upload_time">Last Upload Time: %1$s</string>
    <string name="reports_sent">Reports Sent: %1$d</string>
    <string name="service_scanning">Scanning for Wi-Fi and Cellular networks</string>

    <string name="enter_nickname">Enter Nickname (optional)</string>
    <string name="enter_nickname_title">Nickname: </string>
    <string name="enter_nickname_longtext">Your nickname will appear on the leaderboard.</string>

    <string name="power_saving_mode">Power saving mode</string>
    <string name="power_saving_mode_longtext">When enabled, stumbling will only occur when you are moving.</string>

    <string name="update_title">Download MozStumbler Update?</string>
    <string name="update_message">Installed version: %1$s\nLatest version: %2$s</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>

    <string name="location_not_found">Location not found</string>
    <string name="location_lookup_error">Location lookup error</string>

    <string name="gps_alert_msg">GPS is turned off. Do you want to go to settings and turn it on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="about_version">Version %1$s</string>
    <string name="about_mapbox">Learn more about our mapping provider…</string>
    <string name="about_more">More…</string>
    <string name="about_legal_aosp">Some iconography in this app is reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>

    <string name="upload_observations_sent_title">Sent</string>
    <string name="upload_observations_last_upload_time_title">Last Upload Time:</string>
    <string name="upload_observations_observations_sent_title">Observations:</string>
    <string name="upload_observations_wifis_sent_title">Wi-Fi Access Points:</string>
    <string name="upload_observations_cells_sent_title">Cells:</string>
    <string name="upload_observations_in_queue_title">In queue</string>
    <string name="upload_observations_observations_queued_title">Observations:</string>
    <string name="upload_observations_wifis_queued_title">Wi-Fi Access Points:</string>
    <string name="upload_observations_cells_queued_title">Cells:</string>
    <string name="upload_observations_button">Upload</string>
    <string name="upload_observations_dialog_title">Upload observations</string>

    <string name="detected_activity">Detected Activity: %1$s</string>
    <string name="detected_activity_in_vehicle">Moving (in vehicle)</string>
    <string name="detected_activity_on_bicycle">Moving (on bicycle)</string>
    <string name="detected_activity_on_foot">Moving (on foot)</string>
    <string name="detected_activity_still">Still</string>
    <string name="detected_activity_tilting">Tilting</string>
    <string name="detected_activity_unknown">Unknown</string>

    <string name="upload_wifi_only_title">Upload only on WiFi</string>
    <string name="upload_wifi_only_summary">This option will reduce your data usage over the cellular network.</string>

    <string name="geofencing_off">Geofencing: off</string>
    <string name="geofencing_explain">Geofencing will be set at the next valid location obtained during scanning.</string>
    <string name="geofencing_desc">MozStumbler will pause scanning within 1 km of this lat/long position.</string>
    <string name="geofencing_on">Geofencing @ %1$.3f, %2$.3f</string>
    <string name="geofencing_enable">Geofence this location</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report…</string>
    <string name="crash_notif_title">CrashTest has crashed…</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="send_to_additional_server_title">Send reports to an additional server</string>
    <string name="additional_server_url_title">URL of additional server</string>

    <string name="enable_samsung_service_mode">Enable Samsung service mode</string>
    <string name="enable_samsung_service_mode_summary">Use data available from Samsung Service Mode (if supported)</string>
    <string name="enable_multiple_sim_support_title">Enable Multiple SIM support</string>
    <string name="enable_multiple_sim_support_summary">Scan all radio interfaces on handset with Multiple SIM cards</string>

    <string name="wifi_scan_always_title">Always scan Wi-Fi</string>
    <string name="wifi_scan_always_summary">Scan APs even when Wi-Fi is turned off</string>

    <string name="refresh_map">Refresh location</string>

    <string name="enable_screen_is_off_workaround">Workaround no Cell Updates When Display Off</string>
    <string name="enable_screen_is_off_workaround_summary">Activate workaround to update cell when the screen is off. Requires superuser privileges</string>

</resources>
