<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences">

    <EditTextPreference
        android:key="nickname"
        android:title="@string/enter_nickname"
        android:summary="@string/enter_nickname_longtext" />

    <CheckBoxPreference
        android:key="wifi_only"
        android:title="@string/upload_wifi_only_title"
        android:summary="@string/upload_wifi_only_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="geofence_switch"
        android:title="@string/geofencing_off"
        android:defaultValue="false" />

    <Preference
        android:key="geofence_here"
        android:title="@string/geofencing_enable"
        android:summary="@string/geofencing_desc" />

    <CheckBoxPreference
        android:key="wifi_scan_always"
        android:title="@string/wifi_scan_always_title"
        android:summary="@string/wifi_scan_always_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="enable_screen_is_off_workaround"
        android:title="@string/enable_screen_is_off_workaround"
        android:summary="@string/enable_screen_is_off_workaround_summary"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="send_to_additional_server"
        android:title="@string/send_to_additional_server_title"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="additional_server_url"
        android:title="@string/additional_server_url_title"
        android:dependency="send_to_additional_server"
        android:defaultValue="http://moz.0xdc.ru/v1/submit" />

</PreferenceScreen>
